2011-06-17  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/PARTS: Add xilinx xc18v02pc44 parts by Steve Tell.
  * data/xilinx/xc18v02pc44/xc18v02pc44, data/xilinx/xc18v02pc44/STEPPINGS:
    Add data files for new xilinx parts.

  * src/bsdl/bsdl_sysdep.h: Use config.h directly.
  * src/bsdl/Makefile.am: Drop bsdl_config.h generation and dependencies.
  * .gitignore: Drop bsdl_config.h from ignore list.

2011-06-11  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/bf518f_ezbrd.c, src/bus/bf537_stamp.c, src/bus/bf561_ezkit.c,
    src/svf/svf.c, src/tap/cable/gpio.c, src/tap/cable/ice100.c: Fix set
    but not used warnings with gcc-4.6.

2011-05-10  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/usbconn/libftdi.c (usbconn_ftdi_common_open): Use the new interface
    option and call ftdi_set_interface with it.  Patch by Michael Walle.

  * src/tap/cable/generic_usbconn.h: Add new "interface" option to usage.
    Patch by Michael Walle.

  * data/Makefile.am, data/xilinx/PARTS, data/xilinx/xc2c32a-cp56/STEPPINGS,
    data/xilinx/xc2c32a-cp56/xc2c32a-cp56, data/xilinx/xc2c32a-cv64/STEPPINGS,
    data/xilinx/xc2c32a-cv64/xc2c32a-cv64, data/xilinx/xc2c32a-vq44/STEPPINGS,
    data/xilinx/xc2c32a-vq44/xc2c32a-vq44: Add Xilinx CoolRunner-II info from
    Michael Walle.

2011-04-30  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Force recent versions of autotools (at least ones released
    in the past 5 years.

  * src/bsdl/Makefile.am (OBJEXT): Do not override OBJEXT that automake sets
    up itself.
  * src/svf/Makefile.am (OBJEXT): Likewise.

2011-03-08  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/PARTS: Add xc3s1600e part.
  * data/xilinx/xc3s100e_die/STEPPINGS: Add stepping 1.
  * data/xilinx/xc3s1200e_fg320/xc3s1200e_fg320: Add part info.
  * data/xilinx/xc3s1200e_fg320/STEPPINGS: Add stepping info.
  * data/xilinx/xc3s1600e/xc3s1600e: Add part info.
  * data/xilinx/xc3s1600e/STEPPINGS: Add stepping info.