@@ -1,3 +1,10 @@
+2011-06-22  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/cmd/Makefile.am: Autogenerate command list based on the source
+    files and store in generated_cmd_list.h.
+  * src/cmd/cmd_list.h: Remove hardcoded command list and include new
+    autogenerated header file.
+
 2011-06-17  Mike Frysinger  <vapier@gentoo.org>
 
   * data/xilinx/PARTS: Add xilinx xc18v02pc44 parts by Steve Tell.
